# vafator

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  main.nf  nextflow.config  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: integration_tests.yml  release.yml  unit_tests.yml  workflow_tests.yml
images/: logo_info.txt
nf_modules/: vafator.nf
notebooks/: data_power.tsv  power.ipynb  power.tsv
scripts/: vafator2decifer.py
test_data/: input_data.txt  test_input.txt  test_single_sample.vcf
tests/: integration_test_00.sh  integration_test_01.sh  integration_test_02.sh  integration_test_03.sh  integration_test_04.sh  integration_test_05.sh  integration_test_06.sh  workflow_test_01.sh  workflow_test_02.sh
vafator/: __init__.py  annotator.py  command_line.py  constants.py  genedator.py  hatchet2bed.py  multiallelic_filter.py  pileup_utils.py  pileups.py  ploidies.py  power.py  rank_sum_test.py  vafator2decifer.py
vafator/tests/: test_annotator.py  test_hatchet2bed.py  test_indels.py  test_multiallelic_filter.py  test_pileups.py  test_ploidy_manager.py  test_power_calculator.py  test_rank_sum_test.py  utils.py
vafator/tests/resources/: COLO_829_n1.bam.bai  COLO_829_t1.bam.bai  best.bbc.minimal.ucn  best.seg.minimal.my_metastasis.bed  best.seg.minimal.my_tumor.bed  best.seg.minimal.ucn  project.NIST.hc.snps.indels.chr1_1000000_2000000.vcf  project.NIST_NIST7035_H7AP8ADXX_TAAGGCGA_1_NA12878.bwa.markDuplicates.chr1_1000000_2000000.bam.bai  test1.vcf  test2.vcf  test3.vcf  test4.vcf  test5.vcf  test6.vcf  test_copy_numbers.bed  test_input.txt  test_tumor_normal.vcf
vafator/tests/resources/results/: project.NIST.hc.snps.indels.chr1_1000000_2000000.vaf.vcf  test1_output.vcf  test2_output.vcf  test3_output.vcf  test4_output.vcf  test5_output.vcf  test_annotator1_output.vcf
