[metadata]
name = VAFator
version = 3.0.0
description = Annotate variants in a VCF file with technical annotations from one or more BAMs 
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/TRON-Bioinformatics/vafator
author = Pablo Riesgo Ferreiro, Jonas Ibn-Salem, Luis Kress, Özlem Muslu
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Unix
author_email = priesgoferreiro@gmail.com

[options.entry_points]
console_scripts = 
    vafator=vafator.command_line:annotator
    multiallelics-filter=vafator.command_line:multiallelics_filter
    vafator2decifer=vafator.command_line:vafator2decifer
    hatchet2bed=vafator.command_line:hatchet2bed

[options]
packages = find:
include_package_data = True
zip_safe = False

python_requires = ==3.11

install_requires =
    pandas>=3.0.1,<4
    pysam==0.21.0 # above this version base qualities show up wrong in the presence of soft clipping/insertions/both (latest release 0.23.3)
    cyvcf2>=0.32.1,<0.33
    logzero>=1.7.0,<2
    pybedtools>=0.12.0,<0.13
    numpy>=2.4.3,<3
    scipy>=1.17.1,<2
    setuptools

[options.packages.find]
exclude =
    tests
    tests.*
    legacy
    legacy.*

[options.extras_require]
dev =
    pytest
    ruff
    mypy
test =
    pytest
    pytest-cov
    setuptools